# tira-labra-2022

./: .coveragerc  .env  .env.test  .gitignore  .pylintrc  README.md  pyproject.toml  pytest.ini  tasks.py
data/: test-material1.huf  test-material2.txt  test-material3.txt  test-material4.txt
documentation/: architecture.md  execution-documentation.md  execution-documention.md  how-to-guide.md  requirements-specification.md  requirements_specification.md  testing-documentation.md  weekly-report-1.md  weekly-report-2.md  weekly-report-3.md  weekly-report-4.md  weekly-report-5.md  weekly-report-6.md  weekly-report-final-stage.md
src/: config.py  launch.py  tasks.py
test-data/: compression-log.csv  compression-log.html  gutenberg-project-1.txt  gutenberg-project-argonaut-stories.txt  gutenberg-project-ebook-2.txt  gutenberg-project-martian-shore.txt  gutenberg-project-misc-math-constants.txt  gutenberg-project-standar-operaglass.txt  gutenberg-project-the-wonder-woman.txt  log.csv  natural-language-document-10-paragraphs.txt  natural-language-document-100-paragraphs.txt  natural-language-document-15-paragraphs.txt  natural-language-document-25-paragraphs.txt  natural-language-document-5-paragraphs.txt  natural-language-document-50-paragraphs.txt  random-printable-ascii-10-paragraphs.txt  random-printable-ascii-100-paragraphs.txt  random-printable-ascii-25-paragraphs.txt  random-printable-ascii-5-paragraphs.txt  random-printable-ascii-50-paragraphs.txt  randon-printable-ascii-data-1000000-chr.txt  seitseman-veljesta.txt  test-material1.txt  uncompress-log.csv
(+22 files in other folders)
