[tool.poetry]
name = "tira-labra-2022"
version = "0.1.0"
description = ""
authors = ["Heidi Holappa <heidi.holappa@helsinki.fi>"]

[tool.poetry.dependencies]
python = "^3.8"
invoke = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
